--- a/build.gradle
+++ b/build.gradle
@@ -30,8 +30,12 @@ dependencies {
     implementation 'com.google.guava:guava:23.0'
     implementation group: 'org.apache.poi', name: 'poi', version: '3.17'
     implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '3.17'
-
-
+    testImplementation 'io.cucumber:cucumber-java:6.10.4'
+    testImplementation 'io.cucumber:cucumber-junit:6.10.4'
+    testImplementation 'net.serenity-bdd:serenity-core:2.4.34'
+    testImplementation 'net.serenity-bdd:serenity-junit:2.4.34'
+    testImplementation 'net.serenity-bdd:serenity-screenplay:2.4.34'
+    testImplementation 'net.serenity-bdd:serenity-screenplay-webdriver:2.4.34'
 
 
 }
